# hassflux

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  SECURITY.md  environment.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
data/: entity_mapping.json.example  friendly_names.json.example
docs/: MIGRATION_PLAN.md  MIGRATION_SUMMARY.md  home_assistant_setup.md  post_migration_optimization.md  walkthrough.md
src/hassflux/: cli.py  config.py  database.py  migration.py  tools.py  utils.py
