[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hassflux"
version = "0.1.0"
description = "A robust tool to migrate Home Assistant numeric sensor data from MariaDB to InfluxDB"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Eric Wait", email = "eric@waitphoto.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Home Automation",
]
dependencies = [
    "pymysql>=1.1.0",
    "influxdb-client>=1.36.0",
    "typer[all]>=0.9.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
hassflux = "hassflux.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/hassflux"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
